kubernetes/apps/default/glance/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  parentRefs:
    - name: external
      namespace: network
      kind: Gateway
  hostnames:
    - glance.${SECRET_DOMAIN}
  rules:
    # Route Authentik callback to the outpost
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
      backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: security
          port: 9000
    # Main application route
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: glance
          port: 8080
