kubernetes/apps/default/glance/app/ingress.yaml
---
# File: kubernetes/apps/default/glance/app/outpost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance-outpost
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: glance.${SECRET_DOMAIN}
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-outpost
                port:
                  number: 9000
  tls:
    - hosts:
        - glance.${SECRET_DOMAIN}
