kubernetes/apps/default/glance/app/outpost.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance-outpost
  namespace: default
  annotations:
    # Force nginx controller to accept this even with different class
    kubernetes.io/ingress.class: external
spec:
  rules:
    - host: glance.${SECRET_DOMAIN}
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-authentik-embedded-outpost
                namespace: security
                port:
                  number: 9000
